--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,3 +1,9 @@
+body{
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+    display: block;
+}
 .content, .tab-pane {
     padding-top: 15px;
 }
@@ -30,6 +36,27 @@
     padding: 15px;
     color: #fff;
     text-decoration: none;
-    top: 40%;
     position: relative;
 }
+@media only screen and (max-width: 400px) {
+    .logo img{
+        max-width: 70%;
+        margin: 0 auto;
+        float: none;
+    }
+    .menu a{
+        max-width: 30%;
+        width: 100%;
+        display: block;
+        top: 0;
+        float: left;
+        margin-right: 1%;
+        font-size: 12px;
+        font-weight: bold;
+        text-align: center;
+        height: 66px;
+        vertical-align: middle;
+        margin-bottom: 5px;
+    }
+
+ }
