--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,8 +36,8 @@
               <span>Estado: <b style="color:green; margin-right: 5px;">{{ status }}</b></span><i class="fas fa-stop-circle"></i>
             </a>
           {% else %}
-            <a href="#" id="statusOffline">
-              <span>Estado: <b style="color:red">{{ status }}</b></span>
+            <a href="#" id="startStreaming">
+              <span>Estado: <b style="color:red">{{ status }}</b></span><i class="fas fa-play-circle"></i>
             </a>
           {% endif %}
           
